@@ -5,27 +5,35 @@
 [1, 5, -1]
 [1, 6, -1]
 [1, 7, -1]
+[1, 8, -1]
 [2, 2, 0]
 [2, 3, 1]
 [2, 4, 1]
 [2, 5, 1]
 [2, 6, 1]
 [2, 7, 1]
+[2, 8, 1]
 [3, 3, 0]
 [3, 4, -1]
 [3, 5, 1]
 [3, 6, -1]
 [3, 7, -1]
+[3, 8, 1]
 [4, 4, 0]
 [4, 5, 1]
 [4, 6, 1]
 [4, 7, -1]
+[4, 8, 1]
 [5, 5, 0]
 [5, 6, -1]
 [5, 7, -1]
+[5, 8, 1]
 [6, 6, 0]
 [6, 7, -1]
+[6, 8, 1]
 [7, 7, 0]
+[7, 8, 1]
+[8, 8, 0]
 -1
 -1
 1
