@@ -1,4 +1,4 @@
-v = [0, 2, [1,2], [1,2;3,4], [1,0;1,2], [1,2,3]~, [1,2,3;4,5,6]];
+v = [0, 2, [1,2], [1,2;3,4], [1,0;1,2], [1,2,3]~, [1,2,3;4,5,6], I];
 
 isvec(x) = type(x) == "t_VEC" || type(x) == "t_COL";
 {
